Add new `Lint/IdentityComparison` cop
Follow https://github.com/rubocop-hq/ruby-style-guide/pull/835.

This PR adds new `Lint/IdentityComparison` cop.

```ruby
# bad
foo.object_id == bar.object_id

# good
foo.equal?(bar)
```

The cop prefers `equal?` over `==` when comparing `object_id`.
`Object#equal?` is provided to compare objects for identity, and in contrast
`Object#==` is provided for the purpose of doing value comparison.

--- a/config/default.yml
+++ b/config/default.yml
@@ -1548,6 +1548,12 @@ Lint/HeredocMethodCallPosition:
   StyleGuide: '#heredoc-method-calls'
   VersionAdded: '0.68'
 
+Lint/IdentityComparison:
+  Description: 'Prefer `equal?` over `==` when comparing `object_id`.'
+  Enabled: pending
+  StyleGuide: '#identity-comparison'
+  VersionAdded: '0.91'
+
 Lint/ImplicitStringConcatenation:
   Description: >-
                  Checks for adjacent string literals on the same line, which
