--- a/config/default.yml
+++ b/config/default.yml
@@ -311,6 +311,19 @@ Layout/AssignmentIndentation:
   # But it can be overridden by setting this parameter
   IndentationWidth: ~
 
+Layout/BeginEndAlignment:
+  Description: 'Align ends corresponding to begins correctly.'
+  Enabled: pending
+  VersionAdded: '0.91'
+  # The value `start_of_line` means that `end` should be aligned the start of the line
+  # where the `begin` keyword is.
+  # The value `begin` means that `end` should be aligned with the `begin` keyword.
+  EnforcedStyleAlignWith: start_of_line
+  SupportedStylesAlignWith:
+    - start_of_line
+    - begin
+  Severity: warning
+
 Layout/BlockAlignment:
   Description: 'Align block ends correctly.'
   Enabled: true
