[Fixes #8688] Mark `Style/GlobalStdStream` as unsafe autocorrection.

--- a/config/default.yml
+++ b/config/default.yml
@@ -117,7 +117,7 @@ AllCops:
   # CacheRootDirectory is ~ (nil), which it is by default, the root will be
   # taken from the environment variable `$XDG_CACHE_HOME` if it is set, or if
   # `$XDG_CACHE_HOME` is not set, it will be `$HOME/.cache/`.
-  # The CacheRootDirectory can be overwritten by passing the `--cache-root` command 
+  # The CacheRootDirectory can be overwritten by passing the `--cache-root` command
   # line option or by setting `$RUBOCOP_CACHE_ROOT` environment variable.
   CacheRootDirectory: ~
   # It is possible for a malicious user to know the location of RuboCop's cache
@@ -3090,6 +3090,7 @@ Style/GlobalStdStream:
   StyleGuide: '#global-stdout'
   Enabled: pending
   VersionAdded: '0.89'
+  SafeAutoCorrect: false
 
 Style/GlobalVars:
   Description: 'Do not introduce global variables.'
